--- a/index.css
+++ b/index.css
@@ -169,9 +169,11 @@ span{
 
 .box-image{
     height:300px;
-    background-size: cover;
+    width: 100%;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    background-repeat: no-repeat;
+    /* object-fit: cover; */
 }
 .box-content {
    margin-left: 1rem;
